--- a/frontend/src/css/style.css
+++ b/frontend/src/css/style.css
@@ -67,6 +67,7 @@ ul {
 .content {
     padding: 1%;
     color: white;
+    height: 91%;
 }
 
 .instructions {
@@ -274,3 +275,28 @@ body.final-phase .grid-stack-item-content:hover {
 }
 
 
+
+
+
+
+.choose-mode {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    width: 100%;
+    height: 100%;
+    column-gap: 1%;
+}
+
+.choose-mode button {
+    all: unset;
+    border-radius: 8px;
+    text-align: center;
+    background-color: #0f172a;
+    cursor: pointer;
+}
+
+.summary-grid {
+    background-image: url('/images/background.png');
+    background-position: center;
+    background-size: cover;
+}
