--- a/frontend/src/css/style.css
+++ b/frontend/src/css/style.css
@@ -24,12 +24,12 @@ body {
 
 h1 { font-size: 2.5rem; }
 h2 { font-size: 1.75rem; }
-h3 { font-size: 2rem; }
-h4 { font-size: 1.75rem; }
+h3 { font-size: 1.25rem; }
+h4 { font-size: 1rem; }
 
 p,
 ul {
-    font-size: 1.25rem;
+    font-size: 0.85rem;
 }
 
 ul {
@@ -298,4 +298,60 @@ body.final-phase .grid-stack-item-content:hover {
 .summary-grid {
     background-image: url('/images/background.png');
     background-position: center;
+}
+
+.overuse-card .title {
+    background-color: rgb(136, 0, 0);
+}
+
+.exit {
+    text-align: center;
+    padding-top: 22.5%;
+}
+
+.info-container {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.info-btn {
+  font-size: 1.5rem;
+  cursor: pointer;
+  background: transparent;
+  border: none;
+}
+
+.info-overlay {
+  display: none; /* hidden by default */
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background: rgba(0,0,0,0.85);
+  z-index: 9999;
+  justify-content: center;
+  align-items: center;
+}
+
+.info-content {
+  background: #000000;
+  padding: 30px;
+  max-width: 600px;
+  width: 90%;
+  border-radius: 10px;
+  text-align: center;
+  position: relative;
+}
+
+.close-info-btn {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  background: transparent;
+  border: none;
+  font-size: 1.5rem;
+  cursor: pointer;
+  color: white;
 }
